made some changes, hopefully everything still works

--- a/five_OP_system.ipynb
+++ b/five_OP_system.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -379,7 +379,7 @@
     "    \n",
     "    def __init__(self):\n",
     "        self.memo = {}\n",
-    "        self.bins = 80\n",
+    "        self.bins = 20\n",
     "        \n",
     "    def iqr(self, OP1, OP2):\n",
     "        index = str(OP1.name) + \" \" + str(OP2.name)\n",
@@ -407,9 +407,50 @@
     "                output = (1 - (info / entropy))\n",
     "            self.memo[index] = output\n",
     "            return output\n",
+    "        \n",
+    "    def iqr2(self, OP1, OP2):\n",
+    "        index = str(OP1.name) + \" \" + str(OP2.name)\n",
+    "        x = OP1.traj\n",
+    "        y = OP2.traj\n",
+    "        p_x = d1_bin(x, self.bins)\n",
+    "        p_y = d1_bin(y, self.bins)\n",
+    "        p_xy = d2_bin(x, y, self.bins)\n",
+    "        info = 0\n",
+    "        entropy = 0\n",
+    "\n",
+    "        for i in range(len(p_x)):\n",
+    "            for j in range(len(p_y)):\n",
+    "                if p_xy[i][j] != 0:\n",
+    "                    entropy -= p_xy[i][j] * np.log(p_xy[i][j])\n",
+    "                    info += p_xy[i][j] * np.log(p_xy[i][j] / (p_x[i] * p_y[j]))\n",
+    "        return 1 - info/entropy\n",
     "    \n",
     "    def __str__(self):\n",
     "        print(len(self.memo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9960333028120576\n",
+      "1.9960333028120576\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "mut = Memoizer()\n",
+    "opx=OrderParameter(\"x\", x)\n",
+    "opy=OrderParameter(\"y\", y)\n",
+    "print(mut.iqr(opx, opy))\n",
+    "print(mut.iqr2(opx, opy))\n",
+    "print(mut.iqr2(opx, opx))"
    ]
   },
   {
