working on cleaning up codebase

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
-start biased run
 alanine dipeptide paper
 update codebase for publishing
+
+JOBS:
+unbiased - scheduled to finish saturday, july 27
+biased - still in queue
