--- a/ModelSystems/ten_OP_system.ipynb
+++ b/ModelSystems/ten_OP_system.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "scrolled": true
@@ -355,17 +348,15 @@
     "        \n",
     "    for i in old_ops[::-1]:\n",
     "        matrix.add_OP(i)\n",
-    "        \n",
-    "    while (len(matrix.OPs) > 20):\n",
-    "        matrix.reduce()\n",
     "    \n",
     "    tmp = copy.deepcopy(matrix)\n",
-    "    tmp.reduce()\n",
     "    distortion_array = []\n",
     "    num_array = []\n",
+    "    str_num_array = []\n",
     "\n",
-    "    for i in range(len(matrix.OPs) - 1):\n",
+    "    while (len(tmp.OPs) > 0):\n",
     "        num_array.append(len(tmp.OPs))\n",
+    "        str_num_array.append(str(len(tmp.OPs)))\n",
     "        seed = []\n",
     "        for i in tmp.OPs:\n",
     "            seed.append(i)\n",
@@ -373,12 +364,44 @@
     "        distortion_array.append(distortion(tmp_ops, old_ops, mut))\n",
     "        tmp.reduce()\n",
     "    \n",
-    "    distortion_array = np.array(distortion_array) ** (-0.5)\n",
+    "    plt.plot(str_num_array, distortion_array)\n",
+    "    plt.xlabel(\"Number of OPs\")\n",
+    "    plt.ylabel(\"Distortion\")\n",
+    "    plt.show()\n",
     "    \n",
     "    jumps = []\n",
     "    \n",
-    "    for i in range(len(distortion_array) - 1):\n",
-    "        jumps.append(distortion_array[i] - distortion_array[i + 1])\n",
+    "    for dim in range(1,6):\n",
+    "        neg_expo = np.array(distortion_array) ** (-0.5 * dim)\n",
+    "        plt.plot(str_num_array, neg_expo, label=str(-0.5 * dim))\n",
+    "        local = []\n",
+    "        for j in range(len(neg_expo) - 1):\n",
+    "            local.append(neg_expo[j] - neg_expo[j + 1])\n",
+    "        jumps.append(local)\n",
+    "    \n",
+    "    plt.xlabel(\"Number of Order Parameters\")\n",
+    "    plt.ylabel(\"Distortion with Neg. Expo\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    jump_num_array = []\n",
+    "    for i in range(len(str_num_array) - 1):\n",
+    "        jump_num_array.append(str_num_array[i])\n",
+    "        \n",
+    "    for i in range(len(jumps)):\n",
+    "        plt.plot(jump_num_array, jumps[i], label=str(-0.5 * (i + 1)))\n",
+    "        \n",
+    "    plt.xlabel(\"Number of Order Parameters\")\n",
+    "    plt.ylabel(\"Jump in Distortion with Neg. Expo\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    neg_expo = np.array(distortion_array) ** (-0.5)\n",
+    "    \n",
+    "    jumps = []\n",
+    "    \n",
+    "    for i in range(len(neg_expo) - 1):\n",
+    "        jumps.append(neg_expo[i] - neg_expo[i + 1])\n",
     "    \n",
     "    min_index = 0\n",
     "    for i in range(len(jumps)):\n",
@@ -676,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
