made src directory

--- a/AlanineDipeptide/old_aladip.ipynb
+++ b/AlanineDipeptide/old_aladip.ipynb
@@ -55,7 +55,7 @@
     "            if tmp < min_val:\n",
     "                min_val = tmp\n",
     "        dis = dis + (min_val * min_val)\n",
-    "    return 1 + (dis ** (0.5))"
+    "    return dis ** (0.5)"
    ]
   },
   {
@@ -231,7 +231,7 @@
     "    \n",
     "    def __init__(self):\n",
     "        self.memo = {}\n",
-    "        self.bins = 80\n",
+    "        self.bins = 20\n",
     "        \n",
     "    def iqr(self, OP1, OP2):\n",
     "        index = str(OP1.name) + \" \" + str(OP2.name)\n",
@@ -259,6 +259,23 @@
     "                output = (1 - (info / entropy))\n",
     "            self.memo[index] = output\n",
     "            return output\n",
+    "        \n",
+    "    def iqr2(self, OP1, OP2):\n",
+    "        index = str(OP1.name) + \" \" + str(OP2.name)\n",
+    "        x = OP1.traj\n",
+    "        y = OP2.traj\n",
+    "        p_x = d1_bin(x, self.bins)\n",
+    "        p_y = d1_bin(y, self.bins)\n",
+    "        p_xy = d2_bin(x, y, self.bins)\n",
+    "        info = 0\n",
+    "        entropy = 0\n",
+    "\n",
+    "        for i in range(len(p_x)):\n",
+    "            for j in range(len(p_y)):\n",
+    "                if p_xy[i][j] != 0:\n",
+    "                    entropy -= p_xy[i][j] * np.log(p_xy[i][j])\n",
+    "                    info += p_xy[i][j] * np.log(p_xy[i][j] / (p_x[i] * p_y[j]))\n",
+    "        return 1 - info/entropy\n",
     "    \n",
     "    def __str__(self):\n",
     "        print(len(self.memo))"
@@ -322,7 +339,6 @@
     "        old_centers = copy.deepcopy(centers)\n",
     "        centers = []\n",
     "        groups = grouping(old_centers, ops, mut)\n",
-    "        \n",
     "        for i in range(len(groups)):\n",
     "            result = group_evaluation(groups[i], mut)\n",
     "            centers.append(result)\n",
@@ -333,19 +349,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fix_distortion(lst):\n",
-    "    for i in range(len(lst) - 1):\n",
-    "        index = len(lst) - i - 1\n",
-    "        if lst[index] < lst[index - 1]:\n",
-    "            lst[index - 1] = lst[index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -361,60 +364,62 @@
     "        \n",
     "    for i in old_ops[::-1]:\n",
     "        matrix.add_OP(i)\n",
+    "        \n",
+    "    while (len(matrix.OPs) > 20):\n",
+    "        matrix.reduce()\n",
+    "        \n",
+    "    print(\"Dissimilarity Matrix OPs:\")\n",
+    "    for i in matrix.OPs:\n",
+    "        print(i.name)\n",
     "    \n",
     "    tmp = copy.deepcopy(matrix)\n",
     "    distortion_array = []\n",
     "    num_array = []\n",
     "\n",
-    "    while (len(tmp.OPs) > 0):\n",
+    "    print(\"\\nClustering:\")\n",
+    "    while (len(tmp.OPs) > 1):\n",
+    "        print(len(tmp.OPs))\n",
     "        num_array.append(len(tmp.OPs))\n",
     "        seed = []\n",
     "        for i in tmp.OPs:\n",
     "            seed.append(i)\n",
     "        tmp_ops = cluster(old_ops, seed, mut)\n",
+    "        print(str(len(tmp.OPs)) + \" OPs:\")\n",
+    "        for i in tmp_ops:\n",
+    "            print(i.name)\n",
+    "        print(\"\\n\")\n",
     "        distortion_array.append(distortion(tmp_ops, old_ops, mut))\n",
     "        tmp.reduce()\n",
+    "        \n",
+    "    print(\"\\nDistortions:\")\n",
+    "    print(num_array)\n",
+    "    print(distortion_array)\n",
     "    \n",
-    "    fix_distortion(distortion_array)\n",
+    "    distortion_array = np.array(distortion_array) ** (-0.5)\n",
     "    \n",
     "    jumps = []\n",
     "    \n",
-    "    for dim in range(1,7):\n",
-    "        neg_expo = np.array(distortion_array) ** (-0.5 * dim)\n",
-    "        local = []\n",
-    "        for j in range(len(neg_expo) - 1):\n",
-    "            local.append(neg_expo[j] - neg_expo[j + 1])\n",
-    "        jumps.append(local)\n",
+    "    for i in range(len(distortion_array) - 1):\n",
+    "        jumps.append(distortion_array[i] - distortion_array[i + 1])\n",
     "    \n",
-    "    num_ops = 0\n",
+    "    min_index = 0\n",
+    "    for i in range(len(jumps)):\n",
+    "        if jumps[i] > jumps[min_index]:\n",
+    "            min_index = i\n",
     "    \n",
-    "    for dim in range(1,7):\n",
-    "        neg_expo = np.array(distortion_array) ** (-0.5 * dim)\n",
-    "        jumps = []\n",
-    "        for i in range(len(neg_expo) - 1):\n",
-    "            jumps.append(neg_expo[i] - neg_expo[i + 1])\n",
-    "            \n",
-    "        min_index = 0\n",
-    "        for i in range(len(jumps)):\n",
-    "            if jumps[i] > jumps[min_index]:\n",
-    "                min_index = i\n",
-    "        if num_array[min_index] > num_ops:\n",
-    "            num_ops = num_array[min_index]\n",
-    "        \n",
-    "    while (len(matrix.OPs) > num_ops):\n",
+    "    while (len(matrix.OPs) > num_array[min_index]):\n",
     "        matrix.reduce()\n",
     "        \n",
-    "    centers = cluster(old_ops, matrix.OPs, mut)\n",
-    "    return centers\n"
+    "    return cluster(old_ops, matrix.OPs, mut)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open(\"data/COLVAR\")\n",
+    "f = open(\"pavanala/COLVAR\")\n",
     "\n",
     "first_line = f.readline()\n",
     "ops = [OrderParameter(i, []) for i in first_line.split(\"#! FIELDS time \")[1].split(\" \")]\n",
@@ -431,14 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n",
       "phi\n",
       "psi\n",
       "57_911\n",
@@ -446,12 +450,56 @@
       "d2_19\n",
       "d2_17\n",
       "d8_18\n",
-      "\n"
+      "\n",
+      "Dissimilarity Matrix OPs:\n",
+      "d8_18\n",
+      "\n",
+      "119_1517\n",
+      "57_911\n",
+      "d2_17\n",
+      "d2_19\n",
+      "\n",
+      "Clustering:\n",
+      "5\n",
+      "5 OPs:\n",
+      "d8_18\n",
+      "\n",
+      "psi\n",
+      "phi\n",
+      "d2_17\n",
+      "d2_19\n",
+      "\n",
+      "\n",
+      "4\n",
+      "4 OPs:\n",
+      "d8_18\n",
+      "\n",
+      "psi\n",
+      "phi\n",
+      "d2_19\n",
+      "\n",
+      "\n",
+      "3\n",
+      "3 OPs:\n",
+      "psi\n",
+      "phi\n",
+      "d2_19\n",
+      "\n",
+      "\n",
+      "2\n",
+      "2 OPs:\n",
+      "psi\n",
+      "phi\n",
+      "\n",
+      "\n",
+      "\n",
+      "Distortions:\n",
+      "[5, 4, 3, 2]\n",
+      "[0.638718882726145, 0.8738971036374119, 1.1617300360416716, 1.4745381175722474]\n"
      ]
     }
    ],
    "source": [
-    "print(len(ops))\n",
     "for i in ops:\n",
     "    print(i)\n",
     "final_ops = find_ops(ops, 5)"
@@ -459,49 +507,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "psi\n",
-      "57_911\n",
       "d8_18\n",
       "\n",
+      "psi\n",
+      "phi\n",
+      "d2_17\n",
       "d2_19\n"
      ]
     }
    ],
    "source": [
     "for i in final_ops:\n",
-    "    print(i.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "phi\n",
-      "psi\n",
-      "57_911\n",
-      "119_1517\n",
-      "d2_19\n",
-      "d2_17\n",
-      "d8_18\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "kek = find_ops(ops, len(ops))\n",
-    "for i in kek:\n",
     "    print(i.name)"
    ]
   }
