still working on gibbs file

--- a/BUT/gibbs.ipynb
+++ b/BUT/gibbs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,16 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.320250261692952e-22\n",
-      "7.057115303796603e-21\n",
-      "6.225090277627308e-21\n"
+      "0.818012363975272\n",
+      "0.18198763602472795\n",
+      "0.5010294776234231\n",
+      "4.249659184494325\n",
+      "3.748629706870902\n"
      ]
     }
    ],
@@ -155,8 +157,10 @@
     "total = unbound + bound\n",
     "unbound = unbound / total\n",
     "bound = bound / total\n",
-    "unbound = -1.38064852 * 10**(-23) * 300 * np.log(unbound)\n",
-    "bound = -1.38064852 * 10**(-23) * 300 * np.log(bound)\n",
+    "print(unbound)\n",
+    "print(bound)\n",
+    "unbound = -8.314 * 3 / 10 *  np.log(unbound)\n",
+    "bound = -8.314 * 3 / 10 *  np.log(bound)\n",
     "print(unbound)\n",
     "print(bound)\n",
     "print(bound - unbound)"
