data file for zack to test plots

--- a/BUT/gibbs.ipynb
+++ b/BUT/gibbs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -122,6 +122,15 @@
     "binning = binning / counter\n",
     "plt.plot(binning)\n",
     "plt.show()\n",
+    "file = open(\"data.txt\", \"w+\")\n",
+    "val = mini\n",
+    "for i in binning:\n",
+    "    p = i\n",
+    "    g = -8.314 * 3 / 10 * p\n",
+    "    string = str(val) + \" \" + str(p) + \" \" + str(g) + \"\\n\"\n",
+    "    file.write(string)\n",
+    "    val = val + bin_size\n",
+    "file.close()\n",
     "binning = np.log(binning)\n",
     "binning = -8.314 * 3 / 10 * binning\n",
     "plt.plot(binning)\n",
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
