--- a/ModelSystems/model_output.ipynb
+++ b/ModelSystems/model_output.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,9 +524,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Order Parameters: 10\n",
+      "A\n",
+      "H\n",
+      "F\n",
+      "I\n",
+      "G\n",
+      "D\n",
+      "C\n",
+      "E\n",
+      "B\n",
+      "J\n",
+      "\n",
+      "All order Parmeters:\n",
+      "H5\n",
+      "D7\n",
+      "I4\n",
+      "I2\n",
+      "C12\n",
+      "A12\n",
+      "F7\n",
+      "A2\n",
+      "A9\n",
+      "F1\n",
+      "I9\n",
+      "F5\n",
+      "G6\n",
+      "F3\n",
+      "B1\n",
+      "I6\n",
+      "A10\n",
+      "D\n",
+      "E13\n",
+      "G2\n",
+      "E11\n",
+      "B6\n",
+      "G10\n",
+      "A5\n",
+      "J1\n",
+      "C1\n",
+      "G8\n",
+      "J6\n",
+      "B9\n",
+      "G9\n",
+      "E9\n",
+      "H4\n",
+      "G12\n",
+      "A1\n",
+      "E5\n",
+      "F9\n",
+      "I\n",
+      "I5\n",
+      "E7\n",
+      "H7\n",
+      "B8\n",
+      "F2\n",
+      "B2\n",
+      "F8\n",
+      "A11\n",
+      "I8\n",
+      "C8\n",
+      "I12\n",
+      "A7\n",
+      "J5\n",
+      "C\n",
+      "E6\n",
+      "E\n",
+      "B4\n",
+      "H8\n",
+      "H3\n",
+      "H1\n",
+      "G1\n",
+      "I7\n",
+      "A4\n",
+      "J\n",
+      "J7\n",
+      "E10\n",
+      "I3\n",
+      "E3\n",
+      "D1\n",
+      "G4\n",
+      "J8\n",
+      "G7\n",
+      "H\n",
+      "C6\n",
+      "E12\n",
+      "C11\n",
+      "D4\n",
+      "G3\n",
+      "E1\n",
+      "J4\n",
+      "B\n",
+      "G11\n",
+      "I10\n",
+      "B3\n",
+      "G\n",
+      "E2\n",
+      "C7\n",
+      "D8\n",
+      "C4\n",
+      "A8\n",
+      "C2\n",
+      "B5\n",
+      "A3\n",
+      "H9\n",
+      "G5\n",
+      "B7\n",
+      "H2\n",
+      "E8\n",
+      "J2\n",
+      "I11\n",
+      "J3\n",
+      "F6\n",
+      "A6\n",
+      "F\n",
+      "I13\n",
+      "D9\n",
+      "A13\n",
+      "G13\n",
+      "D6\n",
+      "D3\n",
+      "C5\n",
+      "I1\n",
+      "D2\n",
+      "C10\n",
+      "J9\n",
+      "E4\n",
+      "F4\n",
+      "A\n",
+      "H6\n",
+      "D5\n",
+      "C13\n",
+      "C3\n",
+      "C9\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of Order Parameters: \" + str(len(final_ten_ops)))\n",
     "for i in final_ten_ops:\n",
@@ -538,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,9 +701,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Order Parameters: 5\n",
+      "E\n",
+      "C\n",
+      "B\n",
+      "D\n",
+      "A\n",
+      "\n",
+      "All order Parmeters:\n",
+      "B\n",
+      "E12\n",
+      "E13\n",
+      "E4\n",
+      "E9\n",
+      "A\n",
+      "C1\n",
+      "D7\n",
+      "B5\n",
+      "C13\n",
+      "A3\n",
+      "D3\n",
+      "C6\n",
+      "C4\n",
+      "E5\n",
+      "B2\n",
+      "D6\n",
+      "C5\n",
+      "E2\n",
+      "A2\n",
+      "C7\n",
+      "A8\n",
+      "C10\n",
+      "C2\n",
+      "A11\n",
+      "A4\n",
+      "A10\n",
+      "E3\n",
+      "D1\n",
+      "B4\n",
+      "C8\n",
+      "D9\n",
+      "E7\n",
+      "C\n",
+      "A12\n",
+      "D2\n",
+      "E8\n",
+      "C3\n",
+      "B3\n",
+      "B7\n",
+      "D4\n",
+      "A13\n",
+      "D8\n",
+      "A6\n",
+      "A7\n",
+      "A9\n",
+      "A1\n",
+      "B8\n",
+      "B9\n",
+      "E1\n",
+      "A5\n",
+      "E10\n",
+      "E6\n",
+      "C9\n",
+      "C12\n",
+      "B6\n",
+      "D5\n",
+      "E11\n",
+      "E\n",
+      "D\n",
+      "B1\n",
+      "C11\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Number of Order Parameters: \" + str(len(final_five_ops)))\n",
     "for i in final_five_ops:\n",
