adding reproducibility directory and fixing jump_filename argument issue

--- a/reproducibility/BUT.ipynb
+++ b/reproducibility/BUT.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "import amino_fast"
+    "import amino_original"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colvar = open(\"data/BOUND_COLVAR\")\n",
+    "colvar = open(\"../data/BOUND_COLVAR\")\n",
     "split = colvar.readline().split()\n",
     "names = []\n",
     "trajs = {}\n",
@@ -34,7 +34,7 @@
     "all_ops = []\n",
     "    \n",
     "for i in names:\n",
-    "    all_ops.append(amino_fast.OrderParameter(i, trajs[i]))"
+    "    all_ops.append(amino_original.OrderParameter(i, trajs[i]))"
    ]
   },
   {
@@ -47,10 +47,8 @@
      "output_type": "stream",
      "text": [
       "428\n",
-      "Selected bandwidth: 0.6955852026449655\n",
-      "\n",
-      "Calculating all pairwise distances...\n",
-      "[########################################] | 100% Completed | 47min 29.3s\n",
+      "Building dissimilarity matrix...\n",
+      "Done dissimilarity matrix construction...\n",
       "Checking 20 order parameters...\n",
       "Checking 19 order parameters...\n",
       "Checking 18 order parameters...\n",
@@ -73,15 +71,21 @@
       "Checking 1 order parameters...\n",
       "\n",
       "AMINO order parameters:\n",
-      "d1053_1666\n",
-      "d1259_1664\n"
+      "d134_1666\n",
+      "d1321_1667\n",
+      "d575_1667\n",
+      "d327_1664\n",
+      "d1238_1664\n",
+      "d1631_1666\n",
+      "d960_1667\n",
+      "d1328_1666\n"
      ]
     }
    ],
    "source": [
     "print(len(all_ops))\n",
     "\n",
-    "final_ops = amino_fast.find_ops(all_ops, 20, 80)\n",
+    "final_ops = amino_original.find_ops(all_ops, 20, 80)\n",
     "\n",
     "print(\"\\nAMINO order parameters:\")\n",
     "for i in final_ops:\n",
