update with modern wrapper and style

--- a/BUT.ipynb
+++ b/BUT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "428\n",
-      "Selected bandwidth: 0.6955852026449655\n",
-      "\n",
-      "Calculating all pairwise distances...\n",
-      "[########################################] | 100% Completed | 47min 29.3s\n",
+      "[########################################] | 100% Completed | 266.39 s\n",
       "Checking 20 order parameters...\n",
       "Checking 19 order parameters...\n",
       "Checking 18 order parameters...\n",
@@ -87,6 +83,13 @@
     "for i in final_ops:\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -105,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
