changed cli logic so amino_cli.main can be called as well

--- a/BUT.ipynb
+++ b/BUT.ipynb
@@ -2,51 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import amino_fast"
+    "import amino_cli"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colvar = open(\"data/BOUND_COLVAR\")\n",
-    "split = colvar.readline().split()\n",
-    "names = []\n",
-    "trajs = {}\n",
-    "\n",
-    "for i in range(3, len(split)):\n",
-    "    names.append(split[i])\n",
-    "    trajs[split[i]] = []\n",
-    "    \n",
-    "for line in colvar:\n",
-    "    timestep = line.split()\n",
-    "    for i in range(len(timestep) - 1):\n",
-    "        trajs[names[i]].append(float(timestep[i + 1]))\n",
-    "\n",
-    "all_ops = []\n",
-    "    \n",
-    "for i in names:\n",
-    "    all_ops.append(amino_fast.OrderParameter(i, trajs[i]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 266.39 s\n",
+      "DM construction time: 35.18 s\n",
       "Checking 20 order parameters...\n",
       "Checking 19 order parameters...\n",
       "Checking 18 order parameters...\n",
@@ -68,28 +42,19 @@
       "Checking 2 order parameters...\n",
       "Checking 1 order parameters...\n",
       "\n",
-      "AMINO order parameters:\n",
-      "d1053_1666\n",
-      "d1259_1664\n"
+      "2 AMINO Order Parameters:\n",
+      "d1412_1665\n",
+      "d1182_1666\n"
      ]
     }
    ],
    "source": [
-    "print(len(all_ops))\n",
+    "final_ops = amino_cli.main(\"data/BOUND_COLVAR\", n=20)\n",
     "\n",
-    "final_ops = amino_fast.find_ops(all_ops, 20, 80)\n",
-    "\n",
-    "print(\"\\nAMINO order parameters:\")\n",
+    "print(f\"\\n{len(final_ops)} AMINO Order Parameters:\")\n",
     "for i in final_ops:\n",
     "    print(i)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -108,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
