fix cli printing

--- a/BUT.ipynb
+++ b/BUT.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DM construction time: 35.18 s\n",
+      "DM construction time: 34.68 s\n",
       "Checking 20 order parameters...\n",
       "Checking 19 order parameters...\n",
       "Checking 18 order parameters...\n",
@@ -40,21 +40,31 @@
       "Checking 4 order parameters...\n",
       "Checking 3 order parameters...\n",
       "Checking 2 order parameters...\n",
-      "Checking 1 order parameters...\n",
-      "\n",
-      "2 AMINO Order Parameters:\n",
-      "d1412_1665\n",
-      "d1182_1666\n"
+      "Checking 1 order parameters...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<amino.OrderParameter at 0x7f3652f68a40>,\n",
+       " <amino.OrderParameter at 0x7f3652f43e00>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_ops = amino_cli.main(\"data/BOUND_COLVAR\", n=20)\n",
-    "\n",
-    "print(f\"\\n{len(final_ops)} AMINO Order Parameters:\")\n",
-    "for i in final_ops:\n",
-    "    print(i)"
+    "amino_cli.main(\"data/BOUND_COLVAR\", n=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
