--- a/BUT.ipynb
+++ b/BUT.ipynb
@@ -2,39 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import amino_fast"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colvar = open(\"data/BOUND_COLVAR\")\n",
-    "split = colvar.readline().split()\n",
-    "names = []\n",
-    "trajs = {}\n",
-    "\n",
-    "for i in range(3, len(split)):\n",
-    "    names.append(split[i])\n",
-    "    trajs[split[i]] = []\n",
-    "    \n",
-    "for line in colvar:\n",
-    "    timestep = line.split()\n",
-    "    for i in range(len(timestep) - 1):\n",
-    "        trajs[names[i]].append(float(timestep[i + 1]))\n",
-    "\n",
-    "all_ops = []\n",
-    "    \n",
-    "for i in names:\n",
-    "    all_ops.append(amino_fast.OrderParameter(i, trajs[i]))"
+    "import amino_cli"
    ]
   },
   {
@@ -46,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[########################################] | 100% Completed | 266.39 s\n",
+      "DM construction time: 34.68 s\n",
       "Checking 20 order parameters...\n",
       "Checking 19 order parameters...\n",
       "Checking 18 order parameters...\n",
@@ -66,22 +40,23 @@
       "Checking 4 order parameters...\n",
       "Checking 3 order parameters...\n",
       "Checking 2 order parameters...\n",
-      "Checking 1 order parameters...\n",
-      "\n",
-      "AMINO order parameters:\n",
-      "d1053_1666\n",
-      "d1259_1664\n"
+      "Checking 1 order parameters...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[<amino.OrderParameter at 0x7f3652f68a40>,\n",
+       " <amino.OrderParameter at 0x7f3652f43e00>]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(len(all_ops))\n",
-    "\n",
-    "final_ops = amino_fast.find_ops(all_ops, 20, 80)\n",
-    "\n",
-    "print(\"\\nAMINO order parameters:\")\n",
-    "for i in final_ops:\n",
-    "    print(i)"
+    "amino_cli.main(\"data/BOUND_COLVAR\", n=20)"
    ]
   },
   {
@@ -108,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
